# bsddiff

./: COPYING.md  README.md  meson.build
cmp/: cmp.c  meson.build  regular.c  special.c
compat/: meson.build  warnc.c
diff/: diff.1  diff.c  diff.h  diffreg.c  meson.build
diff3/: meson.build
sdiff/: meson.build  sdiff.c
sys/: cdefs.h
